# apt-ho-resolver

./: .env.example  .gitignore  AGENTS.md  STATUS.md  pyproject.toml  새작업자에게_보내는메일.md
.omo/drafts/: AGENTS-root.md  apt-ho-resolver.md  apt-ho-resolver.md.bak  폴더정리_방안.md
.omo/plans/: apt-ho-resolver.md
scripts/: build_line_fact.py  build_line_fact_v2.py  build_local_db.py  create_indexes.py  infer_pp.py  ingest_seoul.py  load_housing_permit.py  load_public_price.py  load_registry.py  rebuild_all.py  update_direction.py  view_building.py  view_ho.py  view_ho3d.py
src/: api_public_price.py  db.py  dictionary.py  domain.py  floorplan_infer.py  ground_truth.py  ho_key.py  inference.py  kpi.py  local_db.py  matcher.py  pipeline.py  realtime.py  report.py  tracker.py
src/channels/: __init__.py  aptbg.py  auction.py  base.py  juso.py  kapt.py  lh_vacancy.py  onbid.py  registry.py  rtms.py
src/ingest/: __init__.py  (+6 more)
tests/: conftest.py  test_aptbg_channel.py  test_auction_channel.py  test_channel_base.py  test_collective_ingest.py  test_dictionary.py  test_domain.py  test_final_verification.py  test_floorplan_infer.py  test_golden_real.py  test_ground_truth.py  test_ho_key.py  test_housing_permit_ingest.py  test_inference.py  test_juso_channel.py  test_kapt_channel.py  test_kpi.py  test_lh_channel.py  test_matcher.py  test_onbid_channel.py  test_performance.py  test_pipeline.py  test_public_price_ingest.py  test_realtime.py  test_registry_channel.py  test_registry_ingest.py  test_report.py  test_rtms_channel.py  test_tracker.py  test_unit_master_refine.py
