[project]
name = "apt-ho-resolver"
version = "0.1.0"
description = "아파트 호수(號數) 추론 엔진 — Fellegi-Sunter 증거 융합 기반"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "supabase",
    "python-dotenv",
    "PublicDataReader",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
